<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"

        tools:context=".MainActivity">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/version"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/android_version"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/android_name"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/add"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_button"
            android:textSize="17sp" />

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_margin="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            android:stretchColumns="0, 2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/holo_red_dark">
                <TextView
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version" />

                <View android:layout_height="match_parent"
                    android:layout_width="2dp"
                    android:background="@color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code_name" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/holo_red_dark">
                <TextView
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_9_0" />

                <View android:layout_height="match_parent"
                    android:layout_width="2dp"
                    android:background="@color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pie" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/holo_red_dark">
                <TextView
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_8_0" />

                <View android:layout_height="match_parent"
                    android:layout_width="2dp"
                    android:background="@color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oreo" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>